--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>heloo</h1>
+    <h1>helooooo</h1>
     <script src="/main.js"></script>
 </body>
 </html>
